@@ -19,7 +19,6 @@ AC_PROG_LN_S
 AC_PROG_CC
 AC_PROG_CXX
 AX_CXX_COMPILE_STDCXX_17
-AX_COURIER_UNICODE_CXXFLAGS
 
 AC_SUBST(COURIER_UNICODE_CXXFLAGS)
 
@@ -131,7 +130,7 @@ AC_SUBST(HVERSION)
 COMPATVERSION="`echo $VERSION | tr -d '.'`"
 AC_SUBST(COMPATVERSION)
 
-LIBVERSION_CURRENT=8
+LIBVERSION_CURRENT=9
 LIBVERSION_RELEASE=0
 LIBVERSION_AGE=0
 
