@@ -13,7 +13,6 @@ License: GPLv3
 Group: System Environment/Libraries
 URL: http://www.courier-mta.org/unicode/
 Source: http://download.sourceforge.net/courier/courier-unicode-@PACKAGE_VERSION@.tar.bz2
-BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
 BuildRequires: perl-interpreter
 BuildRequires: gcc-c++
 BuildRequires: %{__make}
